--- a/css/report.css
+++ b/css/report.css
@@ -158,7 +158,7 @@ header p {
 .logo-container {
   text-align: center;
   margin-bottom: 20px;
-  width: 180px;
+  width: 165px;
   min-height: 1216px;
   height: 100%;
   border-right: 1.2px solid #eeeeee;
@@ -172,6 +172,7 @@ header p {
 
 .logo img {
   display: flex;
+  margin-top: 10px;
   width: 166px;
   height: 52px;
   /* margin-top: 77px; I might comeback to adjust */
