--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -607,7 +607,7 @@ top-content select {
 }
 
 .hamburger {
-  display: block;
+  display: none;
   /* position: fixed; */
   margin-top: 10px;
   /* margin-left: 20px; */
