--- a/css/login.css
+++ b/css/login.css
@@ -1,36 +1,23 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  ::after*,
+  ::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 }
 
 html {
   font-size: 10px;
 }
 
-.body-center {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  /* padding-block: 2rem; */
-  height: 100vh;
-}
-
 body {
   font-family: "Mulish", sans-serif;
   background-color: var(--bg-color);
-
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
-/* img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-} */
 button {
   cursor: pointer;
   border: none;
@@ -40,8 +27,8 @@ button {
 .container {
   width: 100%;
   max-width: 144rem;
-  height: 100%;
-  max-height: 102.4rem;
+  height: 100vh;
+  overflow-y: hidden;
   display: flex;
 }
 
@@ -57,14 +44,19 @@ button {
   justify-content: center;
 }
 
+.logo-container img {
+  width: 100%;
+}
+
 .left .logo-container {
-  width: 10.8rem;
+  width: 60px;
   height: 13.6rem;
+  padding: 10px;
 }
 .title-container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  /* gap: 1rem; */
   margin-block: 1rem;
 }
 .title-container h1 {
@@ -77,19 +69,18 @@ button {
   font-size: 1.5rem;
   color: #afb0b1;
   font-weight: 400;
-  white-space: nowrap;
+  white-space: wrap;
 }
 form {
   display: flex;
   flex-direction: column;
-  gap: 1.3rem;
+  /* gap: 1.3rem; */
+  /* margin-top: 20px; */
+
   /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.1),
     0 16px 32px rgba(0, 0, 0, 0.1); */
 }
-/* #login-form {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.1),
-    0 16px 32px rgba(0, 0, 0, 0.1);
-} */
+
 .form-group {
   width: 100%;
   display: flex;
@@ -107,6 +98,8 @@ form {
 .form-group > div {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
   align-items: center;
 }
 .form-group div input {
@@ -231,7 +224,7 @@ input {
   background-color: #ff7a00;
   font-size: 2.4rem;
   font-family: inherit;
-  margin-top: 1.5rem;
+  margin-top: 1rem;
   border: none;
   color: #fff;
   padding-block: 2rem;
@@ -244,13 +237,17 @@ input {
 }
 .right {
   width: 50%;
+  height: 100%;
   position: relative;
   background: linear-gradient(45deg, #f16022, #ffa726);
   background-image: url("../images/banner.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+
+  object-fit: cover;
 }
+
 .help-container {
   position: absolute;
   top: 3rem;
@@ -274,6 +271,7 @@ input {
 }
 .customer-mgt {
   position: absolute;
+  padding: 10px;
   bottom: 4rem;
   left: 6rem;
   background-color: #fff;
@@ -312,21 +310,33 @@ input {
   font-size: 1.6rem;
   color: #585858;
 }
+
+.form-icon img {
+  color: #7a7c87;
+  width: 20px;
+  margin-right: 20px;
+}
 /* MEDIA QUERY */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .container {
-    align-items: center;
-    justify-content: center;
+    box-sizing: border-box;
+    padding: 10px;
+
     overflow: hidden;
   }
-  .right {
-    display: none;
+
+  .logo-container img {
+    width: 50px;
+    height: 60px;
   }
+
   .left {
-    /* padding: 20px 0px; */
-    padding-inline: 0px;
+    height: 100%;
+    padding: 20px 0px;
+    padding-inline: 10px;
     justify-content: center;
-    margin-bottom: 2.5rem;
+    margin-top: 120px;
+    /* margin-bottom: 2.5rem; */
   }
 
   .reset {
@@ -369,7 +379,7 @@ input {
   }
 
   .show {
-    margin-right: -10px;
+    margin-right: 10px;
   }
 
   .log-status {
@@ -412,9 +422,12 @@ input {
     margin-left: 0.6rem;
   }
 
-  /* .form-icon {
-    margin-right: 10px;
-  } */
+  .login-input,
+  .password-input {
+    width: 100%;
+    margin-top: 20px;
+    padding: 10px;
+  }
 }
 
 /* Override font size for screens 1024px and larger */
