--- a/css/createnew.css
+++ b/css/createnew.css
@@ -12,15 +12,16 @@ body {
   padding: 0;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  max-width: 100%;
+  height: 100vh;
+  width: 100vw;
   background-color: #fffbf6;
   overflow-x: hidden;
+  box-sizing: border-box;
 }
 .main-content {
   width: 100%;
   height: 100%;
-  margin-left: 278px;
+  margin-left: 78px;
 }
 
 /* container fixed 1440 X 1240 */
@@ -41,7 +42,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 63px;
+  width: 53px;
   min-height: 100%;
   background-color: #2f2f2f;
   position: fixed;
@@ -131,6 +132,7 @@ header {
   display: flex;
   justify-content: space-between;
   color: #34475e;
+  z-index: 999;
 }
 
 header h1 {
@@ -148,6 +150,7 @@ header h1 {
 
 .welcome {
   margin: 0px 0px 20px 0px;
+  z-index: 999;
 }
 
 .bold {
@@ -171,7 +174,7 @@ header p {
 .logo-container {
   text-align: center;
   margin-bottom: 20px;
-  width: 215px;
+  width: 160px;
   min-height: 1216px;
   height: 100%;
   border-right: 1.2px solid #eeeeee;
@@ -431,6 +434,7 @@ a {
 
 .hamburger {
   display: none;
+  height: fit-content;
 
   top: 20px;
   left: 20px;
@@ -476,7 +480,7 @@ img#ham {
   .inspection-options {
     display: flex;
     gap: 10px;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
     overflow-x: hidden;
   }
@@ -547,38 +551,9 @@ img#ham {
     width: 100%;
   }
 
-  /* #jaju {
-    padding: 0px;
-    margin-bottom: 1rem;
-    white-space: nowrap;
-    font-size: 14px;
-    background: linear-gradient(145deg, #ff9a3a, #ff7a00, #cc6300);
-    border: none;
-    box-shadow: 0 5px 10px rgba(255, 122, 0, 0.3);
-    transition: transform 0.2s, box-shadow 0.2s;
-    animation: gradientBackground 5s ease infinite;
-    overflow: hidden;
-    text-align: center;
-  } */
-
   .container {
     justify-content: right;
   }
-
-  /* #jaj img {
-    width: 135px;
-    height: 154px;
-  }
-
-  .option {
-    width: 135px;
-    height: 154px;
-  }
-
-  #kenya {
-    width: 135px;
-    height: 154px;
-  } */
 }
 
 @media screen and (max-width: 320px) {
