--- a/css/login.css
+++ b/css/login.css
@@ -335,7 +335,7 @@ input {
     padding: 20px 0px;
     padding-inline: 10px;
     justify-content: center;
-    margin-top: 120px;
+    /* margin-top: 120px; */
     /* margin-bottom: 2.5rem; */
   }
 
