--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -45,8 +45,10 @@ main {
   position: fixed;
   top: 0;
   left: 0;
-  /* padding: 20px; */
+
+  transition: all 0.3s ease-in-out;
 }
+
 .sidebar nav {
   width: 100%;
   margin-top: 7.5rem;
@@ -649,6 +651,9 @@ img#ham {
     width: 97%;
   }
 
+  .sidebar {
+    transition: all 0.3s ease-in-out;
+  }
   .activity-card {
     width: 93%;
   }
@@ -677,6 +682,18 @@ img#ham {
   }
 }
 
+#sidebarParent.hidden {
+  transform: translateX(-100%);
+}
+
+#main {
+  transition: margin-left 0.3s ease;
+}
+
+#main .shifted {
+  margin-left: 0;
+}
+
 @media screen and (max-width: 430px) {
   /* .container {
     width: 100%;
@@ -691,7 +708,7 @@ img#ham {
     justify-content: center;
     align-items: center;
     padding: 10px;
-    width: 96%;
+    width: 97%;
   }
 
   .activity-card {
@@ -864,7 +881,7 @@ img#ham {
   }
 
   .cards {
-    width: 85%;
+    width: 90%;
     margin-left: 2em;
   }
 
@@ -877,7 +894,7 @@ img#ham {
   }
 
   .activity-card {
-    width: 85%;
-    margin-left: 20px;
+    width: 86%;
+    margin-left: 25px;
   }
 }
