--- a/css/report.css
+++ b/css/report.css
@@ -12,22 +12,18 @@ body {
   padding: 0;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  max-width: 100%;
+  height: 100vh;
+  width: 100vw;
   background-color: #fffbf6;
+  box-sizing: border-box;
 }
-.main-content {
-  width: 100%;
-  height: 100%;
-  /* margin-left: 278px; */
-}
-
 /* container fixed 1440 X 1240 */
 
 .container {
   display: flex;
   justify-content: center;
-  height: 100%;
+  align-items: center;
+  /* height: 100%; */
   width: 100%;
 }
 
@@ -92,7 +88,7 @@ body {
 
 .top-content {
   display: flex;
-  position: fixed;
+
   align-self: flex-end;
 
   align-items: center;
@@ -134,11 +130,6 @@ header h1 {
 }
 
 /* Username in bold text */
-
-.welcome {
-  margin: 0px 0px 20px 15em;
-  /* margin-left: 3em; */
-}
 
 .bold {
   font-size: 22px;
@@ -254,6 +245,13 @@ header p {
   height: 17px;
 }
 
+main {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
 /* policy card style */
 
 .policy-card {
@@ -435,7 +433,6 @@ header p {
 
 .tabs {
   list-style: none;
-  padding: 0;
   margin: 0;
   display: flex;
   border-bottom: 1px solid #e6e6e6;
@@ -516,6 +513,7 @@ header p {
   justify-content: center;
   align-items: center;
   gap: 50px;
+  width: min-content;
 }
 
 .holder {
@@ -592,18 +590,18 @@ img#ham {
 
 /* Media querry for smaller screens */
 
-@media screen and (max-width: 899px) {
+@media screen and (max-width: 1038px) {
   main {
     margin-left: 0;
   }
-  .hamburger {
+  /* .hamburger {
     display: block;
 
     top: 10px;
     left: 15px;
     cursor: pointer;
     z-index: 1000;
-  }
+  } */
   .sidebar,
   .logo-container {
     display: none;
@@ -611,8 +609,8 @@ img#ham {
 
   .top-content {
     border: none;
-    position: fixed;
-    margin-top: 20px;
+
+    margin-top: -28px;
   }
 }
 
@@ -644,18 +642,32 @@ img#ham {
 
   .top-content {
     border: none;
-    position: fixed;
-    margin-top: 13px;
   }
 
   .top-content img {
     width: 1rem;
-    /* height: 0.4rem; */
+  }
+  .hamburger {
+    display: block;
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1080px) {
   .tabs-container {
-    margin-left: 50px;
+    z-index: 999;
+  }
+
+  .policy-card {
+    z-index: 999;
+  }
+
+  .hamburger {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 840px) {
+  .t0p-content {
+    margin-top: -25px;
   }
 }
