--- a/css/form.css
+++ b/css/form.css
@@ -777,7 +777,7 @@ img#ham {
 
 @media screen and (max-width: 1024px) {
   .form-container {
-    overflow-x: auto;
+    overflow-x: hidden;
     z-index: 999;
   }
 
