--- a/css/report.css
+++ b/css/report.css
@@ -118,7 +118,7 @@ header {
   width: 100%;
   padding: 10px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   color: #34475e;
 }
 
@@ -428,6 +428,7 @@ main {
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   padding: 10px;
+  z-index: 999;
   /* height: 477px; */
 }
 
@@ -513,7 +514,6 @@ main {
   justify-content: center;
   align-items: center;
   gap: 50px;
-  width: min-content;
 }
 
 .holder {
