--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -708,7 +708,7 @@ img#ham {
     justify-content: center;
     align-items: center;
     padding: 10px;
-    width: 97%;
+    width: 87%;
   }
 
   .activity-card {
@@ -871,7 +871,7 @@ img#ham {
     font-size: 1.8rem;
   }
   .welcome p {
-    fomt-size: 0.5rem;
+    font-size: 0.5rem;
   }
 }
 
@@ -881,7 +881,7 @@ img#ham {
   }
 
   .cards {
-    width: 90%;
+    width: 87%;
     margin-left: 2em;
   }
 
