--- a/css/form.css
+++ b/css/form.css
@@ -94,7 +94,7 @@ main {
 
 .top-content {
   display: flex;
-  /* margin-top: -30px; */
+  position: absolute;
   align-self: flex-end;
 
   align-items: center;
@@ -691,7 +691,7 @@ img#ham {
 
   .top-content {
     border: none;
-    margin-top: -25px;
+    margin-top: 25px;
   }
 }
 
@@ -713,7 +713,7 @@ img#ham {
   .top-content {
     border: none;
 
-    margin-top: -25px;
+    margin-top: 25px;
     margin-right: 0.1rem;
   }
 
