--- a/css/form.css
+++ b/css/form.css
@@ -96,7 +96,7 @@ main {
   display: flex;
   position: absolute;
   align-self: flex-end;
-
+  margin-top: 10px;
   align-items: center;
   justify-content: center;
   gap: 5px;
