--- a/css/createnew.css
+++ b/css/createnew.css
@@ -305,11 +305,14 @@ a {
   font-size: 12px;
   color: #6c757d;
   cursor: pointer;
+  margin-bottom: 30px;
 }
+
+
 
 .welcome {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   width: 100%;
   justify-content: space-between;
   align-items: center;
@@ -526,6 +529,10 @@ img#ham {
     color: #ff9500;
   }
 
+ 
+
+ 
+  }
   #sidebarParent.hidden {
     transform: translateX(-100%);
   }
