--- a/css/login.css
+++ b/css/login.css
@@ -35,6 +35,7 @@ button {
   width: 50%;
   height: 100%;
   background-color: #fffbf6;
+  background: linear-gradient(135deg, #fffbf6, #ffefd5);
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -85,8 +86,9 @@ form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  /* padding: 2rem; */
+  padding: 2rem;
   background-color: #fffbf6;
+  background: linear-gradient(135deg, #fffbf6, #ffefd5);
 }
 .form-group label {
   font-size: 1.6rem;
@@ -110,6 +112,7 @@ form {
   color: #000;
   font-weight: 400;
   background-color: #fffbf6;
+  background: linear-gradient(135deg, #fffbf6, #ffefd5);
 }
 .form-group div input::placeholder {
   color: #afb0b1;
@@ -238,8 +241,9 @@ input {
   width: 50%;
   height: 100%;
   position: relative;
-  background: linear-gradient(45deg, #f16022, #ffa726);
+  
   background-image: url("../images/banner.png");
+  background: linear-gradient(135deg, #ff7e5f, #feb47b)
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
