--- a/css/login.css
+++ b/css/login.css
@@ -420,6 +420,7 @@ input {
     width: 10.8rem;
     height: 13.6rem;
     margin-top: -10rem;
+    overflow-y: hidden;
   }
   .logo-container img {
     width: 9.5rem;
