--- a/css/login.css
+++ b/css/login.css
@@ -133,88 +133,113 @@ form {
 .log-status {
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
-.log-status p {
-  color: #7f8b94;
-  font-size: 1.2rem;
-}
-.checkbox-wrapper-28 {
-  --size: 18px;
-  position: relative;
-}
-
-.checkbox-wrapper-28 *,
-.checkbox-wrapper-28 *:before,
-.checkbox-wrapper-28 *:after {
+.checkbox-wrapper-1 *,
+.checkbox-wrapper-1 ::after,
+.checkbox-wrapper-1 ::before {
   box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
 }
-
-.checkbox-wrapper-28 .promoted-input-checkbox {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-}
-
-.checkbox-wrapper-28 input:checked ~ svg {
-  height: calc(var(--size) * 0.6);
-  -webkit-animation: draw-checkbox-28 ease-in-out 0.2s forwards;
-  animation: draw-checkbox-28 ease-in-out 0.2s forwards;
-}
-.checkbox-wrapper-28 label:active::after {
-  background-color: #e6e6e6;
-}
-.checkbox-wrapper-28 label {
-  color: #7f8b94;
-  font-size: 1.4rem;
-  line-height: var(--size);
-  cursor: pointer;
-  position: relative;
-}
-.checkbox-wrapper-28 label:after {
-  content: "";
-  height: var(--size);
-  width: var(--size);
-  margin-right: 8px;
-  float: left;
-  border: 2px solid #7f8b94;
-  border-radius: 3px;
-  transition: 0.15s all ease-out;
-}
-.checkbox-wrapper-28 svg {
-  stroke: #ff7a00;
-  stroke-width: 7px;
+.checkbox-wrapper-1 [type="checkbox"].substituted {
+  margin: 0;
+  width: 0;
   height: 0;
-  width: calc(var(--size) * 0.6);
-  position: absolute;
-  left: calc(var(--size) * 0.21);
-  top: calc(var(--size) * 0.2);
-  stroke-dasharray: 33;
+  display: inline;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+.checkbox-wrapper-1 [type="checkbox"].substituted + label:before {
+  content: "";
+  display: inline-block;
+  vertical-align: top;
+  height: 2rem;
+  width: 2rem;
+  margin-right: 0.6em;
+  color: rgba(0, 0, 0, 0.275);
+  border: solid 0.06em;
+  box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em inset,
+    0 0 0 0.07em transparent inset;
+  border-radius: 0.2em;
+  background: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xml:space="preserve" fill="white" viewBox="0 0 9 9"><rect x="0" y="4.3" transform="matrix(-0.707 -0.7072 0.7072 -0.707 0.5891 10.4702)" width="4.3" height="1.6" /><rect x="2.2" y="2.9" transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 12.1877 2.9833)" width="6.1" height="1.7" /></svg>')
+      no-repeat center,
+    white;
+  background-size: 0;
+  will-change: color, border, background, background-size, box-shadow;
+  transform: translate3d(0, 0, 0);
+  transition: color 0.1s, border 0.1s, background 0.15s, box-shadow 0.1s;
+}
+.checkbox-wrapper-1 [type="checkbox"].substituted:enabled:active + label:before,
+.checkbox-wrapper-1
+  [type="checkbox"].substituted:enabled
+  + label:active:before {
+  box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em transparent inset,
+    0 0 0 0.07em rgba(0, 0, 0, 0.1) inset;
+  background-color: #f0f0f0;
+}
+.checkbox-wrapper-1 [type="checkbox"].substituted:checked + label:before {
+  background-color: #ff7a00;
+  background-size: 0.75em;
+  color: rgba(0, 0, 0, 0.075);
+}
+.checkbox-wrapper-1
+  [type="checkbox"].substituted:checked:enabled:active
+  + label:before,
+.checkbox-wrapper-1
+  [type="checkbox"].substituted:checked:enabled
+  + label:active:before {
+  background-color: #ff7a00;
+  color: rgba(0, 0, 0, 0.275);
+}
+.checkbox-wrapper-1 [type="checkbox"].substituted:focus + label:before {
+  box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em transparent inset,
+    0 0 0 0.07em rgba(0, 0, 0, 0.1) inset, 0 0 0 3.3px rgba(65, 159, 255, 0.55),
+    0 0 0 5px rgba(65, 159, 255, 0.3);
+}
+.checkbox-wrapper-1 [type="checkbox"].substituted:focus:active + label:before,
+.checkbox-wrapper-1 [type="checkbox"].substituted:focus + label:active:before {
+  box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em transparent inset,
+    0 0 0 0.07em rgba(0, 0, 0, 0.1) inset, 0 0 0 3.3px rgba(65, 159, 255, 0.55),
+    0 0 0 5px rgba(65, 159, 255, 0.3);
+}
+.checkbox-wrapper-1 [type="checkbox"].substituted:disabled + label:before {
+  opacity: 0.5;
 }
 
-@-webkit-keyframes draw-checkbox-28 {
-  0% {
-    stroke-dashoffset: 33;
-  }
-  100% {
-    stroke-dashoffset: 0;
-  }
+.checkbox-wrapper-1 [type="checkbox"].substituted.dark + label:before {
+  color: rgba(255, 255, 255, 0.275);
+  background-color: #222;
+  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xml:space="preserve" fill="rgba(34, 34, 34, 0.999)" viewBox="0 0 9 9"><rect x="0" y="4.3" transform="matrix(-0.707 -0.7072 0.7072 -0.707 0.5891 10.4702)" width="4.3" height="1.6" /><rect x="2.2" y="2.9" transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 12.1877 2.9833)" width="6.1" height="1.7" /></svg>');
 }
-
-@keyframes draw-checkbox-28 {
-  0% {
-    stroke-dashoffset: 33;
-  }
-  100% {
-    stroke-dashoffset: 0;
-  }
+.checkbox-wrapper-1
+  [type="checkbox"].substituted.dark:enabled:active
+  + label:before,
+.checkbox-wrapper-1
+  [type="checkbox"].substituted.dark:enabled
+  + label:active:before {
+  background-color: #444;
+  box-shadow: 0 0 0.04em, 0 0.06em 0.16em -0.03em transparent inset,
+    0 0 0 0.07em rgba(255, 255, 255, 0.1) inset;
 }
-
+.checkbox-wrapper-1 [type="checkbox"].substituted.dark:checked + label:before {
+  background-color: #a97035;
+  color: rgba(255, 255, 255, 0.075);
+}
+.checkbox-wrapper-1
+  [type="checkbox"].substituted.dark:checked:enabled:active
+  + label:before,
+.checkbox-wrapper-1
+  [type="checkbox"].substituted.dark:checked:enabled
+  + label:active:before {
+  background-color: #c68035;
+  color: rgba(0, 0, 0, 0.275);
+}
+.checkbox-wrapper-1 [type="checkbox"].substituted + label {
+  -webkit-user-select: none;
+  user-select: none;
+}
 input {
   background: white;
 }
@@ -283,7 +308,7 @@ input {
 }
 .customer-mgt {
   position: absolute;
-  padding: 10px;
+  padding: 5px;
   bottom: 4rem;
   left: 6rem;
   background-color: #fff;
